# xelis-blockchain

./: .dockerignore  .gitignore  API.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.xwin  LICENSE  README.md  SECURITY.md  build_all.sh
xelis_common/: Cargo.toml  build.rs
xelis_common/benches/: address.rs  homomorphic_encryption.rs  proofs.rs  transactions.rs
xelis_common/src/: asset.rs  compactu256.rs  config.rs  context.rs  difficulty.rs  error.rs  globals.rs  immutable.rs  json_rpc.rs  lib.rs  network.rs  queue.rs  thread_pool.rs  time.rs  u256.rs  utils.rs  varuint.rs  versioned_type.rs
xelis_common/src/account/: balance.rs  mod.rs  nonce.rs
xelis_common/src/api/: daemon.rs  data.rs  mod.rs  query.rs  wallet.rs
xelis_common/src/api/daemon/: direction.rs  mod.rs
xelis_common/src/asset/: mod.rs
xelis_common/src/block/: block.rs  header.rs  miner.rs  mod.rs  version.rs
xelis_common/src/contract/: cache.rs  chain_state.rs  contract_log.rs  delayed_execution.rs  error.rs  event_callback.rs  metadata.rs  mod.rs  module.rs  output.rs  permission.rs  provider.rs  random.rs  scheduled_execution.rs  source.rs  vm.rs
xelis_common/src/contract/opaque/: address.rs  asset.rs  asset_manager.rs  block.rs  contract.rs  hash.rs  memory_storage.rs  mod.rs  module.rs  random.rs  storage.rs  transaction.rs
xelis_common/src/contract/opaque/asset/: manager.rs  mod.rs
xelis_common/src/contract/opaque/crypto/: ciphertext.rs  hash.rs  (+4 more)
xelis_common/src/contract/scheduled_execution/: kind.rs  manager.rs  mod.rs
xelis_common/src/contract/tests/: asset.rs  btree.rs  contract.rs  events.rs  gas.rs  inter_calls.rs  mod.rs  permission.rs  storage.rs
xelis_common/src/crypto/: address.rs  balance_proof.rs  bech32.rs  hash.rs  human_readable_proof.rs  key.rs  mod.rs  paillier.rs  proofs.rs  transcript.rs
xelis_common/src/crypto/elgamal/: ciphertext.rs  compressed.rs  key.rs  lookup.rs  mod.rs  pedersen.rs  signature.rs
xelis_common/src/crypto/proofs/: arbitrary_range.rs  arbitrary_range_proof.rs  balance.rs  ciphertext_validity.rs  commitment_eq.rs  mod.rs  ownership.rs  range_proof.rs
xelis_common/src/json_rpc/: http.rs  mod.rs  websocket.rs
xelis_common/src/prompt/: argument.rs  art.rs  command.rs  error.rs  mod.rs  option.rs  state.rs  terminal.rs
xelis_common/src/rpc/: error.rs  events.rs  mod.rs  rpc_handler.rs  types.rs
xelis_common/src/rpc/client/: mod.rs  websocket.rs
xelis_common/src/rpc/server/: mod.rs
xelis_common/src/rpc_server/: context.rs  error.rs  handler.rs  mod.rs  rpc_handler.rs  websocket.rs
xelis_common/src/rpc_server/websocket/: handler.rs  http_request.rs  mod.rs
xelis_common/src/serializer/: count.rs  defaults.rs  dynamic_len.rs  hexable.rs  mod.rs  raw.rs  reader.rs  writer.rs
xelis_common/src/tokio/: executor.rs  mod.rs  scheduler.rs  thread_pool.rs
xelis_common/src/tokio/sync/: mod.rs  mutex.rs  rwlock.rs
xelis_common/src/transaction/: aead.rs  builder.rs  contract.rs  extra_data.rs  mod.rs  multisig.rs  reference.rs  source_commitment.rs  tests.rs  verify.rs  version.rs
xelis_common/src/transaction/builder/: fee.rs  mod.rs  state.rs  unsigned.rs
xelis_common/src/transaction/contract/: compressed.rs  const_reader.rs  mod.rs
xelis_common/src/transaction/extra_data/: extra_data.rs  mod.rs  plaintext.rs  shared_key.rs  typed.rs  unknown.rs
xelis_common/src/transaction/mock/: chain_state.rs  mod.rs  provider.rs
xelis_common/src/transaction/payload/: blob.rs  burn.rs  mod.rs  multisig.rs  transfer.rs
xelis_common/src/transaction/tests/: mod.rs
xelis_common/src/transaction/verify/: contract.rs  error.rs  mod.rs  state.rs  zkp_cache.rs
xelis_daemon/: Cargo.toml
xelis_daemon/src/: cli_config.rs  config.rs  lib.rs  main.rs  storage.rs
xelis_daemon/src/core/: block_size_ema.rs  blockchain.rs  blockdag.rs  chain_state.rs  config.rs  difficulty.rs  error.rs  hard_fork.rs  mempool.rs  merkle.rs  message.rs  mod.rs  nonce_checker.rs  simulator.rs  tx_cache.rs  tx_selector.rs  xpool.rs
xelis_daemon/src/core/blockdag/: mergeset.rs  mergeset_tests.rs  mod.rs  ordered.rs  v1.rs  v2.rs
xelis_daemon/src/core/difficulty/: mod.rs  v1.rs  v2.rs  v3.rs
xelis_daemon/src/core/state/: chain_state.rs  fee.rs  mempool_state.rs  mod.rs
xelis_daemon/src/core/storage/: cache.rs  difficulty_provider.rs  mod.rs  sled.rs  snapshot.rs  versioned_type.rs
xelis_daemon/src/p2p/: bootstrap.rs  chain_sync.rs  chain_validator.rs  compression.rs  connection.rs  diffie_hellman.rs  disk_cache.rs  encryption.rs  error.rs  expirable_cache.rs  mod.rs  peer.rs  peer_list.rs  queue.rs  server.rs  tracker.rs
xelis_daemon/src/p2p/chain_sync/: bootstrap.rs  chain_validator.rs  mod.rs
xelis_daemon/src/p2p/packet/: bootstrap_chain.rs  chain.rs  flags.rs  handshake.rs  inventory.rs  mod.rs  object.rs  peer_disconnected.rs  ping.rs
xelis_daemon/src/p2p/peer_list/: disk_cache.rs  mod.rs  peer.rs
xelis_daemon/src/p2p/tracker/: group.rs  mod.rs  request.rs
xelis_daemon/src/rpc/: getwork_server.rs  mod.rs  rpc.rs  websocket.rs
xelis_daemon/src/rpc/getwork/: miner.rs  mod.rs
xelis_miner/: Cargo.toml
xelis_miner/src/: config.rs  main.rs
xelis_wallet/: Cargo.toml
xelis_wallet/src/: account.rs  api.rs  cipher.rs  config.rs  daemon_api.rs  decoder.rs  entry.rs  error.rs  lib.rs  main.rs  network_handler.rs  password_config.rs  storage.rs  transaction_builder.rs  wallet.rs
xelis_wallet/src/api/: mod.rs  rpc.rs  rpc_server.rs  xswd.rs
xelis_wallet/src/api/server/: mod.rs  rpc_server.rs  xswd_server.rs
xelis_wallet/src/api/xswd/: error.rs  mod.rs  server.rs  types.rs
xelis_wallet/src/mnemonics/: english.rs  mod.rs
xelis_wallet/src/mnemonics/languages/: chinese_simplified.rs  dutch.rs  english.rs  esperanto.rs  french.rs  german.rs  italian.rs  japanese.rs  mod.rs  portuguese.rs  russian.rs  spanish.rs
xelis_wallet/src/precomputed_tables/: mod.rs  native.rs  web.rs
xelis_wallet/src/rpc/: mod.rs  rpc.rs
xelis_wallet/src/storage/: mod.rs  tests.rs  types.rs
xelis_wallet/src/storage/backend/: mod.rs  native.rs  web.rs
(+355 files in other folders)
