[workspace]
resolver = "2"

members = [
    "xelis_common",
    "xelis_wallet",
    "xelis_miner",
    "xelis_daemon"
]

[workspace.package]
version = "1.23.0"
edition = "2021"
authors = ["Slixe <slixeprivate@gmail.com>"]

[workspace.dependencies]
xelis_common = { path = "xelis_common" }

xelis-vm = { git = "https://github.com/xelis-project/xelis-vm", tag = "v1.0.0", features = ["logging"] }
xelis-environment = { git = "https://github.com/xelis-project/xelis-vm", tag = "v1.0.0" }
xelis-types = { git = "https://github.com/xelis-project/xelis-vm", tag = "v1.0.0" }
xelis-builder = { git = "https://github.com/xelis-project/xelis-vm", tag = "v1.0.0" }
xelis-bytecode = { git = "https://github.com/xelis-project/xelis-vm", tag = "v1.0.0" }
xelis-assembler = { git = "https://github.com/xelis-project/xelis-vm", tag = "v1.0.0" }
xelis_compiler = { git = "https://github.com/xelis-project/xelis-vm.git", tag = "v1.0.0", package = "xelis-compiler" }
xelis_parser = { git = "https://github.com/xelis-project/xelis-vm.git", tag = "v1.0.0", package = "xelis-parser" }
xelis_lexer = { git = "https://github.com/xelis-project/xelis-vm.git", tag = "v1.0.0", package = "xelis-lexer" }

metrics = "0.24.2"
anyhow = "1"
thiserror = "2"
log = "0.4"
lru = "0.16"
hex = "0.4.3"
async-trait = "0.1.77"
chrono = "0.4.38"
chacha20poly1305 = "0.11.0-rc"
futures = "0.3.31"
lazy_static = "1.4.0"
rand = "0.10"
serde_json = "1"
tokio = "1"
actix-web = "4"
actix-cors = "0.7"
futures-util = "0.3.30"
clap = { version = "4.5.2", features = ["derive"] }
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
strum = { version = "0.27.1", features = ["derive"] }
cfg-if = "1"
tokio-tungstenite-wasm = { version = "0.8.1", features = ["rustls-tls-webpki-roots"] }
schemars = { version = "1.0.4", features = ["indexmap2"] }
runtime-context = "0.1.1"
linked-hash-table = { version = "0.1.2", features = ["serde"] }

# cargo run --profile release-with-lto
[profile.release-with-lto]
inherits = "release"
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
strip = true
