[package]
name = "xelis_daemon"
version = "1.9.0"
edition = "2021"
authors = ["Slixe <slixeprivate@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xelis_common = { path = "../xelis_common", features = ["prompt", "clap", "rpc_server"] }
clap = { version = "4.5.2", features = ["derive"] }
bytes = "1"
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4"
sled = "0.34.7"
lru = "0.12.3"
async-recursion = "1"
async-trait = "0.1.64"
humantime = "2.1.0"
human_bytes = "0.4.2"
lazy_static = "1.4.0"
chacha20poly1305 = "0.10.1"

# Common dependencies
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "time", "macros", "sync", "net"] }
hex = "0.4.3"
log = "0.4"
anyhow = "1"
thiserror = "1"
fern = { version = "0.6", features = ["colored"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
rand = "0.8.4"
ed25519-dalek = "1"
indexmap = { version = "2.0.0", features = ["serde"] }
