[package]
name = "xelis_daemon"
version = "1.20.0"
edition = "2021"
authors = ["Slixe <slixeprivate@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xelis_common = { path = "../xelis_common", features = ["prompt", "clap", "rpc-server", "tokio"] }
xelis-environment = { git = "https://github.com/xelis-project/xelis-vm", branch = "dev" }
xelis-vm = { git = "https://github.com/xelis-project/xelis-vm", branch = "dev" }

# Database backends
sled = "0.34.7"
rocksdb = { version = "0.23.0", optional = true }

# Used for Diffie-Hellman key exchange in p2p
x25519-dalek = { version = "2.0.1", features = ["serde", "zeroize", "static_secrets"] }

metrics-exporter-prometheus = "0.17.0"
semver = "1.0.23"
itertools = "0.14.0"
linked-hash-map = "0.5.6"
bytes = "1"
humantime = "2.1.0"
human_bytes = "0.4.2"
tokio-socks = "0.5.2"
snap = "1.1.1"

# Common dependencies
schemars = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
strum = { workspace = true }
clap = { workspace = true }
lru = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }
chacha20poly1305 = { workspace = true, features = ["bytes"]}
metrics = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "io-std", "time", "macros", "sync", "net"] }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }

[features]
default = ["sled", "rocksdb"]
rocksdb = ["dep:rocksdb"]
sled = []

[dev-dependencies]
tempdir = "*"
