[package]
name = "xelis_daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xelis_common = { workspace = true, features = ["rpc-server", "tokio"] }
xelis-environment = { workspace = true }
xelis-vm = { workspace = true }
xelis-assembler = { workspace = true }

# Database backends
sled = "0.34.7"
rocksdb = { version = "0.23.0", optional = true }

# Used for Diffie-Hellman key exchange in p2p
x25519-dalek = { version = "2.0.1", features = ["serde", "zeroize", "static_secrets"] }

metrics-exporter-prometheus = "0.17.0"
semver = "1.0.23"
itertools = "0.14.0"
bytes = "1"
humantime = "2.1.0"
human_bytes = "0.4.2"
tokio-socks = "0.5.2"
snap = "1.1.1"
pooled-arc = "0.1"

# Common dependencies
schemars = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
strum = { workspace = true }
clap = { workspace = true, optional = true }
lru = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }
chacha20poly1305 = { workspace = true, features = ["bytes"]}
metrics = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "io-std", "time", "macros", "sync", "net"] }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }
linked-hash-table = { workspace = true }

[features]
default = ["cli", "sled", "rocksdb"]
cli = ["dep:clap", "xelis_common/prompt"]
rocksdb = ["dep:rocksdb"]
sled = []

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "xelis_daemon"
path = "src/main.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3.27.0"
