[package]
name = "xelis_miner"
version = "1.19.7"
edition = "2021"
authors = ["Slixe <slixeprivate@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xelis_common = { path = "../xelis_common", features = ["prompt", "clap"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }

# Common dependencies
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
clap = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
futures-util = { workspace = true }

[features]
default = ["api_stats"]
api_stats = []