[package]
name = "xelis_miner"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xelis_common = { workspace = true, features = ["prompt", "clap"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }

# Common dependencies
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
clap = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
futures-util = { workspace = true }

[features]
default = ["api_stats"]
api_stats = []