[package]
name = "xelis_wallet"
version = "1.13.0"
edition = "2021"
authors = ["Slixe <slixeprivate@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xelis_common = { path = "../xelis_common", features = ["json_rpc"] }
# Used to encrypt/decrypt data on disk
chacha20poly1305 = "0.10.1"
sled = "0.34.7"
# CLI commands
clap = { version = "4.5.2", features = ["derive"], optional = true }
# Password hashing
argon2 = "0.4.1"
lazy_static = "1.4.0"
crc32fast = "1.3.2"
actix = { version = "0.13.0", optional = true }
actix-web = { version = "4", optional = true }
hex = "0.4.3"
bytemuck = "1.15.0"

# common dependencies
lru = "0.12.3"
indexmap = { version = "2.0.0", features = ["serde"] }
log = "0.4"
rand = "0.8.4"
thiserror = "1.0.57"
tokio = { version = "1", features = ["rt-multi-thread"] }
anyhow = "1"
fern = { version = "0.6", features = ["colored"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
actix-web-httpauth = { version = "0.8.0", optional = true }
async-trait = "0.1.64"

[features]
cli = ["dep:clap", "xelis_common/prompt"]
default = ["cli", "api_server"]
api_server = ["xelis_common/rpc_server", "dep:actix", "dep:actix-web", "dep:actix-web-httpauth"]