[package]
name = "xelis_wallet"
version = "1.13.0"
edition = "2021"
authors = ["Slixe <slixeprivate@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xelis_common = { path = "../xelis_common", features = ["tokio"] }
# Used to encrypt/decrypt data on disk
chacha20poly1305 = "0.10.1"
sled = "0.34.7"
# CLI commands
clap = { version = "4.5.2", features = ["derive"], optional = true }
# Password hashing
argon2 = "0.4.1"
lazy_static = "1.4.0"
crc32fast = "1.3.2"
actix = { version = "0.13.0", optional = true }
actix-web = { version = "4", optional = true }
hex = "0.4.3"
bytemuck = "1.15.0"

# common dependencies
lru = "0.12.3"
indexmap = { version = "2.0.0", features = ["serde"] }
log = "0.4"
rand = "0.8.4"
thiserror = "1.0.57"
# Used by CLI for multi-threading
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
anyhow = "1"
fern = { version = "0.6", features = ["colored"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
actix-web-httpauth = { version = "0.8.0", optional = true }
async-trait = "0.1.64"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.69", features = ["Window", "Storage"] }
base64 = "0.22.1"

[build-dependencies]
curve25519-dalek = { version = "4.1.1", features = ["ecdlp"], git = "https://github.com/xelis-project/curve25519-dalek", branch = "main" }

[features]
# Set as default dependencies until https://github.com/rust-lang/cargo/issues/4663 is resolved for binary targets
default = ["cli", "api_server"]
cli = ["dep:tokio", "dep:clap", "xelis_common/prompt"]
network_handler = ["xelis_common/json_rpc"]
api_server = ["network_handler", "xelis_common/rpc_server", "dep:actix", "dep:actix-web", "dep:actix-web-httpauth"]

[lib]
crate-type = ["cdylib", "rlib"]
