[package]
name = "xelis_wallet"
version = "1.19.5"
edition = "2021"
authors = ["Slixe <slixeprivate@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xelis_common = { path = "../xelis_common", features = ["tokio"] }
sled = "0.34.7"
argon2 = "0.4.1"
crc32fast = "1.3.2"
bytemuck = "1.15.0"
itertools = "0.14.0"

aes-gcm = { version = "0.11.0-rc.0", optional = true }
actix-web-httpauth = { version = "0.8.0", optional = true }

# common dependencies
actix-web = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
strum = { workspace = true }
lru = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
cfg-if = { workspace = true }
tokio-tungstenite-wasm = { workspace = true, optional = true }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.69", features = ["Window", "Storage", "File", "StorageManager", "FileSystemGetFileOptions", "Navigator", "FileSystemFileHandle", "FileSystemDirectoryHandle", "FileSystemWritableFileStream", "FileSystemSyncAccessHandle"] }
base64 = "0.22.1"
wasm-bindgen-futures = "0.4.43"

[features]
# Set as default dependencies until https://github.com/rust-lang/cargo/issues/4663 is resolved for binary targets
default = ["cli", "api_server", "tokio-multi-thread"]
xswd = ["xelis_common/rpc", "dep:tokio-tungstenite-wasm", "dep:aes-gcm"]
cli = ["tokio-multi-thread", "dep:clap", "xelis_common/prompt"]
network_handler = ["xelis_common/rpc-client"]
api_server = ["xswd", "network_handler", "xelis_common/rpc-server", "dep:actix-web", "dep:actix-web-httpauth"]
tokio-multi-thread = ["xelis_common/tokio-multi-thread"]

[lib]
crate-type = ["cdylib", "rlib"]
